src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Activated__c</fullName>
        <formula>if( isNull(ActivatedDate) ,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_Org_Code__c</fullName>
        <formula>Opportunity.Collection_Post__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection Org Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Report__c</fullName>
        <description>The date the final report is due to the client.</description>
        <inlineHelpText>The date the final report is due to the client.</inlineHelpText>
        <label>Final Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Org_Code__c</fullName>
        <formula>Opportunity.Fulfillment_Post__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment  Org Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mid_Term_Report__c</fullName>
        <description>The date the mid-term report is due to the client.</description>
        <inlineHelpText>The date the mid-term report is due to the client.</inlineHelpText>
        <label>Mid-Term Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MileStone_Tracking__c</fullName>
        <formula>if(Today() &lt;   Welcome_Kit__c , &quot;3. Welcome Kit&quot;,if(Today() &lt;  Mid_Term_Report__c, &quot;1. MidTerm&quot;, If (Today() &lt;  Final_Report__c , &quot;2. Final&quot;, &quot;4. Complete&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MileStone Tracking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Org_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Org Code</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Contact__c</fullName>
        <description>The application contact with the role Organization Contact.</description>
        <inlineHelpText>The application contact with the role Organization Contact.</inlineHelpText>
        <label>Organization Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Organization_Corporate_Officer__c</fullName>
        <description>The applicaiton contact with the role of Organization Corporate Officer.</description>
        <inlineHelpText>The applicaiton contact with the role of Organization Corporate Officer.</inlineHelpText>
        <label>Organization Corporate Officer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicaton</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participation Number</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The successful payment for this order.</description>
        <inlineHelpText>The successful payment for this order.</inlineHelpText>
        <label>Payment 2</label>
        <referenceTo>Payment2__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refunded_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The amount of an order that has been refunded.</description>
        <inlineHelpText>The amount of an order that has been refunded.</inlineHelpText>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit__c</fullName>
        <description>The date the Welcome Kit is due to the client.</description>
        <inlineHelpText>The date the Welcome Kit is due to the client.</inlineHelpText>
        <label>Welcome Kit</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>Participant__c</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>Order_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>Legacy</fullName>
        <active>true</active>
        <description>Legacy order record type</description>
        <label>Legacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services</fullName>
        <active>true</active>
        <description>Services order record type</description>
        <label>Services</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Toolkits_Must_Agree_to_Terms</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Legacy&apos; &amp;&amp; isPickVal(Status, &apos;Paid&apos;) &amp;&amp; not(isBlank(Participant__c)) &amp;&amp; contains(Participant__r.RecordType.Name, &apos;Toolkit&apos;) &amp;&amp;  Participant__r.TermsandConditionsAcknowledgement__c  = false</errorConditionFormula>
        <errorMessage>You must agree to the Terms and Conditions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Toolkits_have_Primary_Contacts</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Legacy&apos; &amp;&amp; isPickVal(Status, &apos;Paid&apos;) &amp;&amp;  not(isBlank(Participant__c)) &amp;&amp;  Participant__r.Primary_Contacts__c = 0</errorConditionFormula>
        <errorMessage>You must specify at least 1 Primary Contact</errorMessage>
    </validationRules>
</CustomObject>